tests/snapshots/docx/docspec/list_then_paragraph_same_style.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
assertion_line: 56
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartUnorderedListItem { id: Some("43"), level: 0, style_type: Disc }
       2: StartParagraph { alignment: None, id: None }
       3: Text { content: "Item one" }
       4: EndParagraph
       5: EndUnorderedListItem
       6: StartUnorderedListItem { id: Some("43"), level: 0, style_type: Disc }
       7: StartParagraph { alignment: None, id: None }
       8: Text { content: "Item two" }
       9: EndParagraph
      10: EndUnorderedListItem
      11: StartUnorderedListItem { id: Some("43"), level: 0, style_type: Disc }
      12: StartParagraph { alignment: None, id: None }
      13: Text { content: "Item three" }
      14: EndParagraph
      15: EndUnorderedListItem
      16: StartParagraph { alignment: None, id: None }
      17: EndParagraph
      18: StartParagraph { alignment: None, id: None }
      19: Text { content: "Body text after the list." }
      20: EndParagraph
      21: EndDocument
  ],
  terminal: Ok,
}
