tests/snapshots/docx/docspec/preformatted-boundaries.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartPreformatted { id: None, syntax: None },
    Text { content: "alpha" },
    LineBreak,
    Text { content: "beta" },
    LineBreak,
    LineBreak,
    Text { content: "gamma" },
    EndPreformatted,
    StartParagraph { alignment: None, id: None },
    Text { content: "regular" },
    EndParagraph,
    StartPreformatted { id: None, syntax: None },
    Text { content: "before heading" },
    EndPreformatted,
    StartHeading { id: None, level: 1 },
    Text { content: "heading" },
    EndHeading,
    StartPreformatted { id: None, syntax: None },
    Text { content: "before quote" },
    EndPreformatted,
    StartBlockQuote { id: None },
    Text { content: "quote" },
    EndBlockQuote,
    StartPreformatted { id: None, syntax: None },
    Text { content: "before list" },
    EndPreformatted,
    StartOrderedListItem { id: Some("1"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "item" },
    EndParagraph,
    EndOrderedListItem,
    StartPreformatted { id: None, syntax: None },
    Text { content: "before table" },
    EndPreformatted,
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "cell" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartPreformatted { id: None, syntax: None },
    Text { content: "cell first" },
    LineBreak,
    Text { content: "cell second" },
    EndPreformatted,
    EndTableCell,
    EndTableRow,
    EndTable,
    EndDocument,
  ],
  terminal: Ok,
}
